<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.termux.app.fragments.settings.StatusCardPreference
        app:key="tai_runtime_status"
        app:title="@string/termux_ai_runtime_status_title"
        app:summary="@string/termux_ai_runtime_status_summary"
        app:persistent="false"
        app:selectable="false"/>

    <PreferenceCategory app:title="@string/termux_ai_runtime_control_header">
        <com.termux.app.fragments.settings.termux.TaiRuntimeActionsPreference
            app:key="tai_runtime_actions"
            app:persistent="false"
            app:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_model_roles_header">
        <ListPreference
            app:key="tai_role_default_assistant"
            app:title="@string/termux_ai_default_assistant_model_title"
            app:entries="@array/termux_ai_model_entries"
            app:entryValues="@array/termux_ai_model_values"
            app:defaultValue="Gemma-4-E2B-it"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="tai_backend_category"
        app:title="@string/termux_ai_backend_header">
        <Preference
            app:key="tai_active_backend"
            app:title="@string/termux_ai_active_backend_title"
            app:persistent="false"
            app:selectable="false"/>
        <Preference
            app:key="tai_mlc_catalog_notice"
            app:title="@string/termux_ai_mlc_catalog_title"
            app:summary="@string/termux_ai_mlc_catalog_summary"
            app:persistent="false"
            app:selectable="false"/>
        <EditTextPreference
            app:key="tai_mlc_custom_download"
            app:title="@string/termux_ai_mlc_custom_download_title"
            app:dialogTitle="@string/termux_ai_mlc_custom_download_title"
            app:summary="@string/termux_ai_mlc_custom_download_warning"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="tai_models_category"
        app:title="@string/termux_ai_models_header">
        <Preference
            app:key="tai_model_privacy_notice"
            app:title="@string/termux_ai_model_privacy_notice_title"
            app:persistent="false"
            app:selectable="false"/>
        <EditTextPreference
            app:key="tai_huggingface_token"
            app:title="@string/termux_ai_huggingface_token_title"
            app:dialogTitle="@string/termux_ai_huggingface_token_title"
            app:summary="@string/termux_ai_huggingface_token_summary"/>
        <Preference
            app:key="tai_model_import"
            app:title="@string/termux_ai_model_import_title"
            app:summary="@string/termux_ai_model_import_summary"
            app:persistent="false"/>
        <Preference
            app:key="tai_models_refresh"
            app:title="@string/termux_ai_models_refresh_title"
            app:summary="@string/termux_ai_models_refresh_summary"
            app:persistent="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="tai_device_capabilities_category"
        app:title="@string/termux_ai_device_capabilities_header">
        <Preference
            app:key="tai_mlc_support_status"
            app:title="@string/termux_ai_mlc_support_status_title"
            app:persistent="false"
            app:selectable="false"/>
        <Preference
            app:key="tai_mlc_unsupported_reason"
            app:title="@string/termux_ai_mlc_unsupported_reason_title"
            app:persistent="false"
            app:selectable="false"
            app:enabled="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_runtime_header">
        <com.termux.app.fragments.settings.termux.TaiOverridesPreference
            app:key="tai_runtime_overrides"
            app:persistent="false"
            app:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_prompts_header">
        <EditTextPreference
            app:key="tai_system_prompt_general"
            app:title="@string/termux_ai_general_prompt_title"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/termux_ai_capabilities_header">
        <EditTextPreference
            app:key="tai_api_port"
            app:title="@string/termux_ai_api_port_title"
            app:dialogTitle="@string/termux_ai_api_port_title"
            app:defaultValue="41237"/>
        <Preference
            app:key="tai_api_port_randomize"
            app:title="@string/termux_ai_api_port_randomize_title"
            app:summary="@string/termux_ai_api_port_randomize_summary"
            app:persistent="false"/>
        <EditTextPreference
            app:key="tai_api_token"
            app:title="@string/termux_ai_api_token_title"
            app:dialogTitle="@string/termux_ai_api_token_title"/>
        <Preference
            app:key="tai_api_token_rotate"
            app:title="@string/termux_ai_api_token_rotate_title"
            app:summary="@string/termux_ai_api_token_rotate_summary"
            app:persistent="false"/>
        <androidx.preference.SwitchPreferenceCompat
            app:key="tai_lan_enabled"
            app:title="@string/termux_ai_lan_enabled_title"
            app:summaryOff="@string/termux_ai_lan_enabled_summary_off"
            app:summaryOn="@string/termux_ai_lan_enabled_summary_on"
            app:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
