<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.SeekBarPreference
        app:key="app_launcher_button_count"
        app:title="@string/termux_app_launcher_button_count_title"
        app:summary="@string/termux_app_launcher_button_count_summary"
        app:min="1"
        android:max="20"
        android:defaultValue="7"
        app:showSeekBarValue="true" />

    <androidx.preference.SeekBarPreference
        app:key="app_launcher_bar_height_percent"
        app:title="@string/termux_app_launcher_bar_height_title"
        app:summary="@string/termux_app_launcher_bar_height_summary"
        app:min="0"
        android:max="3"
        android:defaultValue="2"
        app:showSeekBarValue="false" />

    <SwitchPreferenceCompat
        app:key="app_launcher_display_app_names"
        app:title="@string/termux_app_launcher_display_app_names_title"
        app:summary="@string/termux_app_launcher_display_app_names_summary"
        android:defaultValue="false" />

</PreferenceScreen>
